# GOL.rs

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENCE  Makefile  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
assets/: demo.rle  pufferfish.rle  traffic-jam.rle
doc/: benchmark.md
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/f32_to_isize/base/: sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/f32_to_isize/new/: benchmark.json  estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/f32_to_isize/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/isize_to_f32/base/: benchmark.json  estimates.json  sample.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/isize_to_f32/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/coordinate_conversions/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/100x100/base/: sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/100x100/new/: benchmark.json  estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/100x100/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/10x10/new/: benchmark.json  estimates.json  sample.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/10x10/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/50x50/base/: tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/50x50/new/: benchmark.json  estimates.json  sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/50x50/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/full_generation/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/10/base/: benchmark.json  sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/10/new/: estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/10/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/100/base/: benchmark.json  estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/100/new/: sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/100/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/200/base/: estimates.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/200/new/: benchmark.json  sample.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/200/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/50/base/: estimates.json  sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/50/new/: benchmark.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/50/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/grid_calculations/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/blinker/base/: benchmark.json  sample.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/blinker/new/: estimates.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/blinker/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/block/base/: benchmark.json  estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/block/new/: sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/block/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/glider/base/: sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/glider/new/: benchmark.json  estimates.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/glider/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/known_patterns/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/100x100/base/: benchmark.json  tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/100x100/new/: estimates.json  sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/100x100/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/10x10/base/: benchmark.json  estimates.json  sample.json
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/10x10/new/: tukey.json
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/10x10/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/neighbor_counts/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/report/: index.html
doc/benchmark-snapshots/benchmark-13b7dc6/rules/report/: index.html
docker/: Dockerfile
parse_rle_macro/: Cargo.toml
parse_rle_macro/src/: lib.rs
src/: cellule.rs  gui.rs  info.rs  lib.rs  main.rs
src/config/: color.rs  constants.rs  display.rs  mod.rs  simulation.rs
src/lib/config/: Cargo.toml
src/lib/config/src/: color.rs  constants.rs  display.rs  lib.rs  simulation.rs
src/lib/derive_macros/: Cargo.toml
src/lib/derive_macros/src/: lib.rs
src/lib/rendering/: Cargo.toml
src/lib/rendering/benches/: rendering_bench.rs
src/lib/rendering/src/: grid.rs  lib.rs  sprites.rs
src/lib/simulation/: Cargo.toml
src/lib/simulation/benches/: simulation_bench.rs
src/lib/simulation/src/: cell.rs  generation.rs  lib.rs  pattern.rs  rules.rs
src/lib/ui/: Cargo.toml
src/lib/ui/src/: camera.rs  controls.rs  input.rs  lib.rs  modals.rs  pattern.rs
src/lib/utils/: Cargo.toml
src/lib/utils/src/: conversion.rs  diagnostics.rs  lib.rs
src/rendering/: grid.rs  mod.rs  sprites.rs
src/simulation/: cell.rs  generation.rs  mod.rs  pattern.rs  rules.rs
src/ui/: camera.rs  controls.rs  input.rs  mod.rs  modals.rs  pattern.rs
src/utils/: conversion.rs  diagnostics.rs  mod.rs
tests/: gol.rs
webapp/: index.html  styles.css
(+20 files in other folders)
