[package]
name = "jeu_de_la_vie"
version = "0.1.0"
edition = "2024"
authors = ["Tonguechaude"]
description = "Implémentation du Jeu de la vie en Rust et WASM avec Bevy"
license = "GNU - AGPL v3.0"

[dependencies]
rand = "0.9.2"
bevy_egui = "0.36.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] } # to enable rand support for wasm32 target

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    # Fonctionnalitées de Bevy :
    "multi_threaded",     # Lancer avec le multi-threading
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    # Platform-specific:
    "x11",    # Linux: Support X11 windowing system
    "webgl2", # Web: use WebGL2 instead of WebGPU
    #"trace",
]

[profile.release]
opt-level = 3     # Maximum optimization
lto = true        # Link Time Optimization
codegen-units = 1 # Optimize for binary size
strip = true      # Remove debug symbols
panic = 'abort'   # Reduce unwinding overhead
