# FerrumC Project workspace
#
# Layout of this file:
# - Package description
# - Members of the workspace.
# - Profile compilation settings.
# - Workspace lints
# - Workspace dependencies.

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Evan Challias <evan.challias@tonguechaude.fr>"
]
description = "Game of Life impl in Rust with Bevy"
keywords = ["GOL", "Bevy", "WASM"]
license = "GNU - AGPL v3.0"

[workspace]
resolver = "2"

#================= Members =================#
members = [
  "src/bin",
  "src/lib/config",
  "src/lib/derive_macros",
  "src/lib/rendering",
  "src/lib/simulation",
  "src/lib/ui",
  "src/lib/utils",
]

#================== Lints ==================#
[workspace.lints.rust]
unsafe_code = "allow"
unused_unsafe = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
match_bool = "deny"
mut_mut = "deny"
wildcard_dependencies = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

#================= Profile =================#
[profile.profiling]
inherits = "release"
debug = true

[profile.release]

[profile.hyper]
inherits = "release"
strip = true
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.bench]
debug = true

#=============== Dependencies ==============#
[workspace.dependencies]
# Workspace members
gol-config = { path = "src/lib/config" }
gol-macros = { path = "src/lib/derive_macros" }
gol-rendering = { path = "src/lib/rendering" }
gol-simulation = { path = "src/lib/simulation" }
gol-ui = { path = "src/lib/ui" }
gol-utils = { path = "src/lib/utils" }

rand = "0.9.2"
bevy_egui = "0.36.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] } # to enable rand support for wasm32 target
rustc-hash = "2.1"
colored = "3.0.0"

[workspace.dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    # Fonctionnalitées de Bevy :
    "multi_threaded",     # Lancer avec le multi-threading
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    # Platform-specific:
    "x11",    # Linux: Support X11 windowing system
    "webgl2", # Web: use WebGL2 instead of WebGPU
    #"trace",
]
