[workspace]
resolver = "2"

members = [
  "src/bin",
  "src/lib/config",
  "src/lib/derive_macros",
  "src/lib/rendering",
  "src/lib/simulation",
  "src/lib/ui",
  "src/lib/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Game of Life impl in Rust with Bevy"
license = "GNU - AGPL v3.0"
keywords = ["Bevy", "GOL", "WASM"]

[workspace.dependencies]
gol-config = { path = "src/lib/config" }
gol-macros = { path = "src/lib/derive_macros" }
gol-rendering = { path = "src/lib/rendering" }
gol-simulation = { path = "src/lib/simulation" }
gol-ui = { path = "src/lib/ui" }
gol-utils = { path = "src/lib/utils" }

bevy_egui = "0.39.1"
colored = "3.0.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }  # to enable rand support for wasm32 target
rand = "0.9.2"
rustc-hash = "2.1"

[workspace.dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
  "bevy_core_pipeline",  # Common rendering abstractions
  "bevy_image",  # Image asset handling (split from bevy_render in 0.17)
  "bevy_render",  # Rendering framework core
  "bevy_sprite",  # 2D (sprites) components
  "bevy_sprite_render",  # 2D (sprites) GPU rendering (split from bevy_sprite in 0.17)
  "bevy_text",  # Font/text resource required by bevy_sprite's Text2D system
  "bevy_winit",  # Window management
  "multi_threaded",  # run with multi-threading
  "wayland",
  "webgl2",  # Web: use WebGL2 instead of WebGPU
  # "trace",
]

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
infinite_loop = "deny"
match_bool = "deny"
mut_mut = "deny"
redundant_type_annotations = "deny"
wildcard_dependencies = "deny"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
unsafe_code = "allow"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_unsafe = "deny"

[profile.bench]
debug = true

[profile.release]

[profile.hyper]
inherits = "release"
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
