[package]
name = "gol-ui"
version = "0.1.0"
edition = "2024"
description = "Gol UI utilities"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
gol-config = { workspace = true }
gol-utils = { workspace = true }
gol-simulation = { workspace = true }

